tests/type-errors/move-semantics/adopt_local_binding.cx
struct Resource : @nodrop {
    int data;
};

int main() {
    Resource value = (Resource) {
        .data = 1
    };

    Resource adopted = @unsafe(@adopt(value));
    adopted.drop();
    return 0;
}

void Resource::drop(this) {
    @leak(this);
}
